typo fixes + begin adding cv

--- a/cv.html
+++ b/cv.html
@@ -50,6 +50,9 @@
 						<section class="wrapper style5">
 							<div class="inner">
 								<section>
+									<ul>
+										<a href="/assets/downloadableFile/CV - fr - Antony Ménard.pdf" download>Download CV to PDF here</a>
+									</ul>
 									<h4>Diploma</h4>
 									<ul>
 										<li>Bachelor's degree in video game Development, UQAC, 2022</li>
@@ -67,7 +70,7 @@
 									<h4>Work Experiences</h4>
 									<ul>
 										<li>Mobile App Developper - Bi Expertise
-											<p> May 2021 - August 2021 and August 2022-Now <br>
+											<p> May to August 2021 and August 2022 to Now <br>
 												-Explore solutions to conceptualize 3D models using photogrammetry<br>
 												-Search for new technologies and useful concepts for the projet at hand<br>
 												-Stay up to date with new technologies and learn new skills about Azure Essentials and Blender<br>
@@ -75,12 +78,12 @@
 											</p>
 										</li>
 										<li>Student Staff - Beneva
-											<p>March 2020 - August 2020 <br>
+											<p>March to August 2020 <br>
 												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
 												-Automate the Beneva's mobile app build with GitHub Actions<br>											</p>
 										</li>
 										<li>Internship - Beneva
-											<p>May 2019 - August 2019 <br>
+											<p>May to August 2019 <br>
 												-Automating of interface testing on mobile app<br>
 												-Developping a web site to spread the use of tests by others developpers<br>
 												-Research for new technologies and sofware to adapt the tests on both Android and IOS<br>
@@ -92,7 +95,7 @@
 									<ul>
 										<li>2 Excellence scholarship of UQAC Foundation (2020, 2022)</li>
 										<li>Third prize at HackQC 2019 (Create an app to identify nearby electric car charging stations and the touristic attractions near them)</li>
-										<li>Scholarship of Glendon University for an English immersion (Explore program), Toronto</li>
+										<li>Scholarship of Glendon University for an English immersion (Explore 2019 program), Toronto</li>
 									</ul>
 									<hr />
 									<h4>Languages</h4>
