--- a/fr/cv.html
+++ b/fr/cv.html
@@ -50,6 +50,9 @@
 						<section class="wrapper style5">
 							<div class="inner">
 								<section>
+									<ul>
+										<a href="/assets/downloadableFile/CV - fr - Antony Ménard.pdf" download>Télécharger le CV en PDF ici</a>
+									</ul>
 									<h4>Diplômes</h4>
 									<ul>
 										<li>BAC en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022</li>
@@ -67,7 +70,7 @@
 									<h4>Expériences Professionnelles</h4>
 									<ul>
 										<li>Développeur d'application mobile - Bi Expertise
-											<p> Mai 2021 - Août 2021 et Août 2022-À ce jour <br>
+											<p> Mai à Août 2021 - Août 2022 à ce jour<br>
 												- Explorer des solutions pour conceptualiser des modèles 3D à l'aide de la photogrammétrie<br>
 												- Recherche de nouvelles technologies et de concepts utiles pour le projet en question<br>
 												- Restez à jour sur les nouvelles technologies et apprendre de nouvelles compétences sur Azure Essentials et Blender<br>
@@ -75,13 +78,13 @@
 											</p>
 										</li>
 										<li>Employé étudiant - Beneva
-											<p>Mars 2020 - Août 2020 <br>
+											<p>Mars à Août 2020 <br>
 												- Analyser les caractéristiques existantes et, le cas échéant, définir de nouvelles solutions aux besoins des systèmes<br>
 												- Automatiser la création de l'application mobile de Beneva avec les GitHub Actions<br>
 											</p>
 										</li>
 										<li>Stagiaire - Beneva
-											<p>Mai 2019 - Août 2019 <br>
+											<p>Mai à Août 2019 <br>
 												- Automatisation des tests d'interface sur l'application mobile<br>
 												- Création d'un site Web pour diffuser l'utilisation des tests par d'autres développeurs<br>
 												- Recherche de nouvelles technologies et de logiciels pour adapter les tests sur Android et IOS<br>
@@ -91,9 +94,9 @@
 									<hr />
 									<h4>Distinctions</h4>
 									<ul>
-										<li>2 Bourse d'excellence de la Fondation UQAC (2020, 2022)</li>
+										<li>2 Bourses d'excellence de la Fondation UQAC (2020, 2022)</li>
 										<li>Troisième prix au HackQC 2019 (créer une application pour identifier les stations de recharge des voitures électriques à proximité et les attractions touristiques à proximité d'elles)</li>
-										<li>Bourse de l'Université Glendon pour une immersion anglaise (programme Explorer), Toronto</li>
+										<li>Bourse de l'Université Glendon pour une immersion anglaise (programme Explore 2018), Toronto</li>
 									</ul>
 									<hr />
 									<h4>Langues</h4>
