--- a/fr/index.html
+++ b/fr/index.html
@@ -82,14 +82,14 @@
 					<section class="spotlight">
 						<div class="image"><img src="../images/echo.jpg" alt="" /></div><div class="content">
 							<h2><a href="echo.html">Echo</a></h2>
-							<p>Un jeu narratif avec un peu d'infiltration fait avec une équipe multidisciplinaire. 
-								Ce jeu sérieux vous apprend le concept d'une chambre d'écho</p>
+							<p>Un jeu narratif avec un peu d'infiltration, fait avec une équipe multidisciplinaire. 
+								Ce jeu sérieux vous apprend le concept d'une chambre d'écho.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/be_bold.jpg" alt="" /></div><div class="content">
 							<h2><a href="beBold.html">Be Bold!</a></h2>
-							<p>Auto-runner avec un esthétique synth-wave. Sauter et tirer pour compléter les niveaux</p>
+							<p>Auto-runner avec un esthétique synth-wave. Sautez et tirez pour compléter les niveaux.</p>
 						</div>
 					</section>
 					<section class="spotlight">
@@ -102,14 +102,14 @@
 					<section class="spotlight">
 						<div class="image"><img src="../images/resistance_is_futile.png" alt="" /></div><div class="content">
 							<h2><a href="resistanceIsFutile.html">Resistance is futile</a></h2>
-							<p>Un tour par tour avec une mécanique rpg. Combattre et piller les ennemis jusqu'à ce que mort s'en suive</p>
+							<p>Un tour par tour avec une mécanique rpg. Combattez et pillez les ennemis jusqu'à ce que mort s'en suive.</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/excess_mana.png" alt="" /></div><div class="content">
 							<h2><a href="excessMana.html">Excess Mana</a></h2>
-							<p>Un tower-defense avec vu du dessus avec un peu d'exploration. 
-								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes</p>
+							<p>Un tower-defense avec vue du dessus avec un peu d'exploration. 
+								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes.</p>
 						</div>
 					</section>
 				</section>
@@ -145,7 +145,7 @@
 								<h3>Distinctions</h3>
 								<p>
 									2 Bourses d'excellence universitaires<br><br>
-									Gagnant d'un prix au HackQC 2019
+									Gagnant d'un prix au HackQC 2019<br><br>
 									Bourse pour une immersion en anglais
 								</p>
 							</li>
