--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							<h2>About me</h2>
 							<p>
 								I have completed my Bachelor's degree in Video Game Development and I am currently looking for a job 
-								in the video game industry. I am hardworking, and I like new challenges where I can test my limits and 
+								in the game industry. I am hardworking, and I like new challenges where I can test my limits and 
 								skills. I am eager to work in a collaborative environment, where I can continue to learn and help my 
 								colleagues whenever I can.
 							</p>
@@ -71,7 +71,7 @@
 						<div class="image"><img src="images/up_we_go.png" alt="" /></div><div class="content">
 							<h2><a href="upWeGo.html">Up We Go</a></h2>
 							<p>
-								A 3D platformer that up to 8 players can play online simultaneously. Grab and roll your way through the 
+								A 3D platformer where up to 8 players can play online simultaneously. Grab and roll your way through the 
 								level to reach the giant tree.
 							</p>
 						</div>
@@ -79,34 +79,44 @@
 					<section class="spotlight">
 						<div class="image"><img src="images/echo.jpg" alt="" /></div><div class="content">
 							<h2><a href="echo.html">Echo</a></h2>
-							<p>A narrative driven-game with a bit of stealth made with a multidisciplinary team.
-									This serious game teaches you about the concept of an echo chamber</p>
+							<p>
+								A narrative driven-game with a bit of stealth made with a multidisciplinary team.
+								This serious game teaches you about the concept of an echo chamber.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content">
 							<h2><a href="beBold.html">Be Bold!</a></h2>
-							<p>An auto-runner with a synthwave esthetic. Jump and shoot to complete the levels</p>
+							<p>
+								An auto-runner with a synthwave esthetic. Jump and shoot to complete the levels.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
 							<h2><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples (Ongoing)</a></h2>
-							<p>A personnal project in the form of a Rogue-Doom-like. 
-								A match up between Doom Eternal's character movements and RoboQuest's game loop. </p>
+							<p>
+								A personnal project in the form of a Rogue-Doom-like. 
+								A match up between Doom Eternal's character movements and RoboQuest's game loop.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/resistance_is_futile.png" alt="" /></div><div class="content">
 							<h2><a href="resistanceIsFutile.html">Resistance is futile</a></h2>
-							<p>A turn-by-turn game with rpg mechanics. Fight and loot enemies until death</p>
+							<p>
+								A turn-by-turn game with rpg mechanics. Fight and loot enemies until death.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/excess_mana.png" alt="" /></div><div class="content">
 							<h2><a href="excessMana.html">Excess Mana</a></h2>
-							<p>A top-down tower-defense with a bit of exploration. 
-								Switch between elemental powers to fights slimes</p>
+							<p>
+								A top-down tower-defense with a bit of exploration. 
+								Switch between elemental powers to fights slimes.
+							</p>
 						</div>
 					</section>
 				</section>
