--- a/upWeGo.html
+++ b/upWeGo.html
@@ -70,7 +70,7 @@
 
 								<hr />
 
-								<h3>Développement</h3>
+								<h3>Development</h3>
 								<p>
 									The synthesis project for my Bachelor's degree. The game was planned and created during a 
 									session of 16 weeks with a team of five programmers. The design phase when pretty smoothly: we wanted a 
