front page banner

--- a/cv.html
+++ b/cv.html
@@ -51,7 +51,7 @@
 							<div class="inner">
 								<section>
 									<ul>
-										<a href="/assets/downloadableFile/CV - fr - Antony Ménard.pdf" download>Download CV to PDF here</a>
+										<a href="/assets/downloadableFile/CV - en - Antony Ménard.pdf" download>Download CV to PDF here</a>
 									</ul>
 									<h4>Diploma</h4>
 									<ul>
@@ -62,9 +62,9 @@
 									<h4>Competences</h4>
 									<ul>
 										<li>Languages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
-										<li>Platform: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
+										<li>Platforms: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
 										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Others: Agile/Kanban Methods</li>
+										<li>Other: Agile/Kanban Methods</li>
 									</ul>
 									<hr />
 									<h4>Work Experiences</h4>
