--- a/fr/cv.html
+++ b/fr/cv.html
@@ -62,9 +62,9 @@
 									<h4>Compétences</h4>
 									<ul>
 										<li>Langages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
-										<li>Plateforme: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
+										<li>Plateformes: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
 										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Autres: Agile/Kanban Methods</li>
+										<li>Autre: Agile/Kanban Methods</li>
 									</ul>
 									<hr />
 									<h4>Expériences Professionnelles</h4>
