video fix + tests

--- a/upWeGo.html
+++ b/upWeGo.html
@@ -53,7 +53,7 @@
 								<h3>Gameplay</h3>
 								<iframe
 									src="https://www.youtube.com/embed/r7rTGY3_xrQ" 
-									title="YouTube video player" 
+									title="Up We Go Video" 
 									frameborder="0" 
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 									allowfullscreen>
