--- a/fr/beBold.html
+++ b/fr/beBold.html
@@ -51,11 +51,9 @@
 							<div class="inner">
 
 								<h3>Gameplay</h3>
-								<iframe 
-									width="560" 
-									height="315" 
+								<iframe
 									src="https://www.youtube.com/embed/bro1bCSxR7w" 
-									title="YouTube video player" 
+									title="Be Bold Vidéo" 
 									frameborder="0" 
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 									allowfullscreen>
