--- a/fr/upWeGo.html
+++ b/fr/upWeGo.html
@@ -52,10 +52,10 @@
 
 								<h3>Gameplay</h3>
 								<iframe 
-									width="560" 
-									height="315" 
+									width=25%
+									height=100%
 									src="https://www.youtube.com/embed/r7rTGY3_xrQ" 
-									title="YouTube video player" 
+									title="Up We Go Vidéo" 
 									frameborder="0" 
 									allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
 									allowfullscreen>
