Typo + url title fix

--- a/fr/index.html
+++ b/fr/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Antony Ménard Portofolio</title>
+		<title>Antony Ménard Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
@@ -45,7 +45,7 @@
 		<!-- Main -->
 				<section id="banner">
 					<div class="inner">
-						<h2>Antony Ménard <br>Portofolio</h2>
+						<h2>Antony Ménard <br>Portfolio</h2>
 						<p>Présentation des projets et CV</p>
 					</div>
 					<a href="#one" class="more scrolly">En savoir plus</a>
