--- a/fr/excessMana.html
+++ b/fr/excessMana.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Excess Mana</title>
+		<title>Antony Ménard Portfolio - Excess Mana</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
