--- a/fr/howDoYouLikeThemApples.html
+++ b/fr/howDoYouLikeThemApples.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>How Do You Like Them Apples</title>
+		<title>Antony Ménard Portfolio - How Do You Like Them Apples</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="../assets/css/main.css" />
