update pdf and web cv

--- a/cv.html
+++ b/cv.html
@@ -56,33 +56,34 @@
 									<h4>Diploma</h4>
 									<ul>
 										<li>Bachelor's degree in video game Development, UQAC, 2022</li>
+										<li>Certifications Azure Fundamentals (AZ-900)</li>
 										<li>DEC in programming, video game option, Cégep de Ste-Foy, 2020</li>
 									</ul>
 									<hr />
-									<h4>Competences</h4>
+									<h4>Skills</h4>
 									<ul>
+										<li>Fluency in French and English (read, spoken, written)</li>
 										<li>Languages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
 										<li>Platforms: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
-										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Other: Agile/Kanban Methods</li>
+										<li>Agile/Kanban Methods</li>
 									</ul>
 									<hr />
 									<h4>Work Experiences</h4>
 									<ul>
 										<li>Mobile App Developper - Bi Expertise
-											<p> May to August 2021 and August 2022 to Now <br>
+											<p> May to August 2021 and May 2022 to May 2023 <br>
 												-Explore solutions to conceptualize 3D models using photogrammetry<br>
 												-Search for new technologies and useful concepts for the projet at hand<br>
 												-Stay up to date with new technologies and learn new skills about Azure Essentials and Blender<br>
 												-Collaborate with other programmers, analyse constraints and suggest appropriate concepts for different features<br>
 											</p>
 										</li>
-										<li>Student Staff - Beneva
+										<li>Junior Programmer - Beneva
 											<p>March to August 2020 <br>
 												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
 												-Automate the Beneva's mobile app build with GitHub Actions<br>											</p>
 										</li>
-										<li>Internship - Beneva
+										<li>Junior programmer (Internship) - Beneva
 											<p>May to August 2019 <br>
 												-Automating of interface testing on mobile app<br>
 												-Developping a web site to spread the use of tests by others developpers<br>
@@ -93,14 +94,9 @@
 									<hr />
 									<h4>Distinctions</h4>
 									<ul>
-										<li>2 Excellence scholarship of UQAC Foundation (2020, 2022)</li>
+										<li>Two Excellence Scholarships from UQAC Foundation (2020, 2022)</li>
 										<li>Third prize at HackQC 2019 (Create an app to identify nearby electric car charging stations and the touristic attractions near them)</li>
-										<li>Scholarship of Glendon University for an English immersion (Explore 2019 program), Toronto</li>
-									</ul>
-									<hr />
-									<h4>Languages</h4>
-									<ul>
-										<li>French and English (Spoken, Read, Written)</li>
+										<li>Scholarship of Glendon University of Toronto for an English immersion(Explore 2018 program)</li>
 									</ul>
 									<hr />
 								</section>
