--- a/fr/cv.html
+++ b/fr/cv.html
@@ -56,34 +56,35 @@
 									<h4>Diplômes</h4>
 									<ul>
 										<li>BAC en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022</li>
+										<li>Certifications Azure Fundamentals (AZ-900)</li>
 										<li>DEC en programmation, option jeux vidéo, Cégep de Ste-Foy, 2020</li>
 									</ul>
 									<hr />
 									<h4>Compétences</h4>
 									<ul>
+										<li>Maîtrise du français et de l'anglais (lu, parlé, écrit)</li>
 										<li>Langages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
 										<li>Plateformes: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
-										<li>Certifications: Azure Fundamentals (AZ-900)</li>
-										<li>Autre: Agile/Kanban Methods</li>
+										<li>Méthodologies Agile/Kanban</li>
 									</ul>
 									<hr />
 									<h4>Expériences Professionnelles</h4>
 									<ul>
 										<li>Développeur d'application mobile - Bi Expertise
-											<p> Mai à Août 2021 - Août 2022 à ce jour<br>
+											<p> Mai à Août 2021 - Mai 2022 à Mai 2023<br>
 												- Explorer des solutions pour conceptualiser des modèles 3D à l'aide de la photogrammétrie<br>
 												- Recherche de nouvelles technologies et de concepts utiles pour le projet en question<br>
 												- Restez à jour sur les nouvelles technologies et apprendre de nouvelles compétences sur Azure Essentials et Blender<br>
 												- Collaborer avec d'autres programmeurs, analyser les contraintes et suggérer des concepts appropriés pour le problème présent<br>
 											</p>
 										</li>
-										<li>Employé étudiant - Beneva
+										<li>Programmeur junior - Beneva
 											<p>Mars à Août 2020 <br>
 												- Analyser les caractéristiques existantes et, le cas échéant, définir de nouvelles solutions aux besoins des systèmes<br>
 												- Automatiser la création de l'application mobile de Beneva avec les GitHub Actions<br>
 											</p>
 										</li>
-										<li>Stagiaire - Beneva
+										<li>Programmeur junior (stagiaire) - Beneva
 											<p>Mai à Août 2019 <br>
 												- Automatisation des tests d'interface sur l'application mobile<br>
 												- Création d'un site Web pour diffuser l'utilisation des tests par d'autres développeurs<br>
@@ -94,14 +95,9 @@
 									<hr />
 									<h4>Distinctions</h4>
 									<ul>
-										<li>2 Bourses d'excellence de la Fondation UQAC (2020, 2022)</li>
-										<li>Troisième prix au HackQC 2019 (créer une application pour identifier les stations de recharge des voitures électriques à proximité et les attractions touristiques à proximité d'elles)</li>
-										<li>Bourse de l'Université Glendon pour une immersion anglaise (programme Explore 2018), Toronto</li>
-									</ul>
-									<hr />
-									<h4>Langues</h4>
-									<ul>
-										<li>Français et anglais (parlé, lu, écrit)</li>
+										<li>Récipiendaire de deux bourses d'excellence remises par la Fondation UQAC (2020, 2022)</li>
+										<li>Gagnant du troisième prix au HackQC 2019 (créer une application pour identifier les stations de recharge des voitures électriques à proximité et les attractions touristiques à proximité d'elles)</li>
+										<li>Récipiendaire d'une bourse de l'Université Glendon de Toronto pour un programme d'immersion anglaise (Explore 2018)</li>
 									</ul>
 									<hr />
 								</section>
