Fix cv job title

--- a/cv.html
+++ b/cv.html
@@ -78,12 +78,12 @@
 												-Collaborate with other programmers, analyse constraints and suggest appropriate concepts for different features<br>
 											</p>
 										</li>
-										<li>Junior Programmer - Beneva
+										<li>Programmer - Beneva
 											<p>March to August 2020 <br>
 												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
 												-Automate the Beneva's mobile app build with GitHub Actions<br>											</p>
 										</li>
-										<li>Junior programmer (Internship) - Beneva
+										<li>Programmer (Internship) - Beneva
 											<p>May to August 2019 <br>
 												-Automating of interface testing on mobile app<br>
 												-Developping a web site to spread the use of tests by others developpers<br>
