--- a/fr/cv.html
+++ b/fr/cv.html
@@ -78,13 +78,13 @@
 												- Collaborer avec d'autres programmeurs, analyser les contraintes et suggérer des concepts appropriés pour le problème présent<br>
 											</p>
 										</li>
-										<li>Programmeur junior - Beneva
+										<li>Programmeur - Beneva
 											<p>Mars à Août 2020 <br>
 												- Analyser les caractéristiques existantes et, le cas échéant, définir de nouvelles solutions aux besoins des systèmes<br>
 												- Automatiser la création de l'application mobile de Beneva avec les GitHub Actions<br>
 											</p>
 										</li>
-										<li>Programmeur junior (stagiaire) - Beneva
+										<li>Programmeur (stagiaire) - Beneva
 											<p>Mai à Août 2019 <br>
 												- Automatisation des tests d'interface sur l'application mobile<br>
 												- Création d'un site Web pour diffuser l'utilisation des tests par d'autres développeurs<br>
