--- a/fr/echo.html
+++ b/fr/echo.html
@@ -80,7 +80,7 @@
 						<li><a href="https://www.linkedin.com/in/antony-m%C3%A9nard-923083182/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/AntonyMenard" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						<li><a href="https://gitlab.com/AntonyMenard604" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
-						<li><a href="mailto:antonymenard@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:antonymenard2014@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="languages">
 						<a href="../echo.html">En</a>
