Remove old perso project with newer

--- a/aLightIsAllWeNeed.html
+++ b/aLightIsAllWeNeed.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Antony Ménard Portfolio - How Do You Like Them Apples</title>
+		<title>Antony Ménard Portfolio - A Light Is All We Need</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -26,13 +26,13 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Page principale</a></li>
+											<li><a href="index.html">Front Page</a></li>
 											<li><a href="upWeGo.html">Up We Go</a></li>
 											<li><a href="echo.html">Echo</a></li>
 											<li><a href="beBold.html">Be Bold</a></li>
 											<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
 											<li><a href="excessMana.html">Excess Mana</a></li>
-											<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
+											<li><a href="aLightIsAllWeNeed.html">A Light Is All We Need</a></li>
 											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
@@ -44,27 +44,26 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>How Do You Like Them Apples</h2>
-							<p>Projet en cours fait dans Unreal Engine 4</p>
+							<h2>A Light Is All We Need</h2>
+							<p>Third person shooter Vampire Survivor-like in Unity</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<h3>Gameplay</h3>
 								<p>
-									Ce jeu n'est pas encore terminé, mais l'objectif final est d'avoir un gameplay semblable à 
-									<a href="https://bethesda.net/en/game/doom">Doom Eternal</a> avec une conception de niveaux inspiré par 
-									l'approche rogue-like de <a href="https://www.roboquest.com/">RoboQuest</a>.
+									The game is not yet finished, but the end game is to have a 
+									<a href="https://poncle.games/vampire-survivors">Vampire Survival</a>-like gameplay with a more active role for the player, who will be able to aim and use certain abilities themself. 
+									Visibility of the level layout is limitied, but is revealed as the game goes on.
 								</p>
 
 								<hr />
 
-								<h3>Développement</h3>
+								<h3>Development</h3>
 								<p>
-									Ce jeu est mon projet personnel du moment. Le mouvement du personnage est la première priorité 
-									sur la liste. Puis, quelques mécaniques pour le lancer de pommes, suivis par la création d'enemies 
-									pour être capable de jouer un peu dans un niveau. Des modèles 3D ont été acheté pour accélérer le 
-									dévelopement et avoir quelque chose de plaisant pour les yeux.
+									The game is my current personal project. The character's movement needs to be adjusted to feel better but is good enough to test other elements of the game. 
+									Basic enemies and energy orb can already spawn, and the character can attack, meaning that only the death of the character is needed to complete a basic gameplay loop.
+									After the death of the player, the next element to do is the power upgrade system where the player will be able to learn more "spells" and upgrade those he already has when he collects enough energy orb.
 								</p>
 
 							</div>
@@ -80,8 +79,8 @@
 						<li><a href="mailto:antonymenard2014@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="languages">
-						<a href="../howDoYouLikeThemApples.html">En</a>
-						<a href="howDoYouLikeThemApples.html">Fr</a>
+						<a href="aLightIsAllWeNeed.html">En</a>
+						<a href="fr/aLightIsAllWeNeed.html">Fr</a>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
@@ -91,13 +90,13 @@
 			</div>
 
 		<!-- Scripts -->
-		<script src="../assets/js/jquery.min.js"></script>
-		<script src="../assets/js/jquery.scrollex.min.js"></script>
-		<script src="../assets/js/jquery.scrolly.min.js"></script>
-		<script src="../assets/js/browser.min.js"></script>
-		<script src="../assets/js/breakpoints.min.js"></script>
-		<script src="../assets/js/util.js"></script>
-		<script src="../assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
