--- a/fr/aLightIsAllWeNeed.html
+++ b/fr/aLightIsAllWeNeed.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Antony Ménard Portfolio - How Do You Like Them Apples</title>
+		<title>Antony Ménard Portfolio - A Light Is All We Need</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="../assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
@@ -26,13 +26,13 @@
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Front Page</a></li>
+											<li><a href="index.html">Page principale</a></li>
 											<li><a href="upWeGo.html">Up We Go</a></li>
 											<li><a href="echo.html">Echo</a></li>
 											<li><a href="beBold.html">Be Bold</a></li>
 											<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
 											<li><a href="excessMana.html">Excess Mana</a></li>
-											<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
+											<li><a href="aLightIsAllWeNeed.html">A Light Is All We Need</a></li>
 											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
@@ -44,26 +44,27 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>How Do You Like Them Apples</h2>
-							<p>Doom-like in Unreal Engine 4</p>
+							<h2>A Light Is All We Need</h2>
+							<p>«Third person shooter» semblable à Vampire Survivor fait dans Unity</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
 
 								<h3>Gameplay</h3>
 								<p>
-									The game is not yet finished, but the end game is to have a 
-									<a href="https://bethesda.net/en/game/doom">Doom Eternal</a>-like gameplay with a level design 
-									inspired by a rogue-like approch like <a href="https://www.roboquest.com/">RoboQuest</a>
+									Ce jeu n'est pas encore terminé, mais l'objectif final est d'avoir un gameplay semblable à 
+									<a href="https://poncle.games/vampire-survivors">Vampire Survivor</a> avec un rôle plus actif pour le joueur, où il sera capable de viser et utiliser certaines abilitées lui-même. 
+									La visibilité du niveau est limité, mais est révélée durant la progression du jeu.
 								</p>
 
 								<hr />
 
-								<h3>Development</h3>
+								<h3>Développement</h3>
 								<p>
-									The game is my current personal project. The character's movement is the first priority on the list. 
-									Than a basic apple throwing mechanic, followed by creating some enemies to be able to play a bit in a 
-									level. Some 3D assets were bought to speed up the development and be somewhat more pleasing to the eyes.
+									Ce jeu est mon projet personnel du moment. Le mouvement du personnage doit être ajusté pour avoir une meilleur sensation mais est suffisant pour tester d'autres éléments du jeu.
+									Des ennemis basics et des orbes d'energie peuvent déjà apparaitre, et le joueur peut attaquer, ce qui veut dire que seul la mort du joueur est manquante pour compléter une boucle de gameplay.
+									Après la mort du joueur, le prochain élément à faire est le système d'amélioraion de pouvoir où le joueur pourra apprendre de nouveaux "sorts" et 
+									améliorer ceux qu'il possède déjà lorsqu'il aura amassé assez d'orbes d'énergie.
 								</p>
 
 							</div>
@@ -79,8 +80,8 @@
 						<li><a href="mailto:antonymenard2014@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="languages">
-						<a href="howDoYouLikeThemApples.html">En</a>
-						<a href="fr/howDoYouLikeThemApples.html">Fr</a>
+						<a href="../aLightIsAllWeNeed.html">En</a>
+						<a href="aLightIsAllWeNeed.html">Fr</a>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
@@ -90,13 +91,13 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="../assets/js/jquery.min.js"></script>
+		<script src="../assets/js/jquery.scrollex.min.js"></script>
+		<script src="../assets/js/jquery.scrolly.min.js"></script>
+		<script src="../assets/js/browser.min.js"></script>
+		<script src="../assets/js/breakpoints.min.js"></script>
+		<script src="../assets/js/util.js"></script>
+		<script src="../assets/js/main.js"></script>
 
 	</body>
 </html>
