--- a/fr/index.html
+++ b/fr/index.html
@@ -33,7 +33,7 @@
 										<li><a href="beBold.html">Be Bold</a></li>
 										<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
 										<li><a href="excessMana.html">Excess Mana</a></li>
-										<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
+										<li><a href="aLightIsAllWeNeed.html">A Light Is All We Need</a></li>
 										<li><a href="cv.html">CV</a></li>
 									</ul>
 								</div>
@@ -89,27 +89,35 @@
 					<section class="spotlight">
 						<div class="image"><img src="../images/be_bold.jpg" alt="" /></div><div class="content">
 							<h2><a href="beBold.html">Be Bold!</a></h2>
-							<p>Auto-runner avec un esthétique synth-wave. Sautez et tirez pour compléter les niveaux.</p>
+							<p>
+								Auto-runner avec un esthétique synth-wave. Sautez et tirez pour compléter les niveaux.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/coming_soon.jpg" alt="" /></div><div class="content">
-							<h2><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples (En cours)</a></h2>
-							<p>Un projet personnel sous la forme d'un Rogue-Doom-like. Un match entre les mouvements du personnage 
-								de Doom Eternal et la boucle de jeu de RoboQuest.</p>
+							<h2><a href="aLightIsAllWeNeed.html">A Light Is All We Need (En cours)</a></h2>
+							<p>
+								Un projet personnel sous la forme d'un «third person shooter» semblable à Vampire Survivor. 
+								Collectez des orbes d'énergie pour augmenter votre puissance et déchainez la sur les vagues d'ennemis.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/resistance_is_futile.png" alt="" /></div><div class="content">
 							<h2><a href="resistanceIsFutile.html">Resistance is futile</a></h2>
-							<p>Un tour par tour avec une mécanique rpg. Combattez et pillez les ennemis jusqu'à ce que mort s'en suive.</p>
+							<p>
+								Un tour par tour avec une mécanique rpg. Combattez et pillez les ennemis jusqu'à ce que mort s'en suive.
+							</p>
 						</div>
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="../images/excess_mana.png" alt="" /></div><div class="content">
 							<h2><a href="excessMana.html">Excess Mana</a></h2>
-							<p>Un tower-defense avec vue du dessus avec un peu d'exploration. 
-								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes.</p>
+							<p>
+								Un tower-defense avec vue du dessus avec un peu d'exploration. 
+								Passez d'un pouvoir élémentaire à l'autre pour lutter contre les slimes.
+							</p>
 						</div>
 					</section>
 				</section>
