--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 										<li><a href="beBold.html">Be Bold</a></li>
 										<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
 										<li><a href="excessMana.html">Excess Mana</a></li>
-										<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
+										<li><a href="aLightIsAllWeNeed.html">A Light Is All We Need</a></li>
 										<li><a href="cv.html">CV</a></li>
 									</ul>
 								</div>
@@ -86,7 +86,7 @@
 						</div>
 					</section>
 					<section class="spotlight">
-						<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content">
+						<div class="image"><img src="images/be_bold.jpg" alt="" /></div><div class="content"> 
 							<h2><a href="beBold.html">Be Bold!</a></h2>
 							<p>
 								An auto-runner with a synthwave esthetic. Jump and shoot to complete the levels.
@@ -95,10 +95,10 @@
 					</section>
 					<section class="spotlight">
 						<div class="image"><img src="images/coming_soon.jpg" alt="" /></div><div class="content">
-							<h2><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples (Ongoing)</a></h2>
+							<h2><a href="aLightIsAllWeNeed.html">A Light Is All We Need (Ongoing)</a></h2>
 							<p>
-								A personnal project in the form of a Rogue-Doom-like. 
-								A match up between Doom Eternal's character movements and RoboQuest's game loop.
+								A personnal project in the form of a third person shooter Vampire Survivor-like. 
+								Collect energy orbs to enhance your powers and unleash it on the enemy waves.
 							</p>
 						</div>
 					</section>
