--- a/fr/beBold.html
+++ b/fr/beBold.html
@@ -32,7 +32,7 @@
 											<li><a href="beBold.html">Be Bold</a></li>
 											<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
 											<li><a href="excessMana.html">Excess Mana</a></li>
-											<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
+											<li><a href="aLightIsAllWeNeed.html">A Light Is All We Need</a></li>
 											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
