--- a/goldenNic.html
+++ b/goldenNic.html
@@ -33,7 +33,7 @@
 											<li><a href="resistanceIsFutile.html">Resistance Is Futile</a></li>
 											<li><a href="excessMana.html">Excess Mana</a></li>
 											<li><a href="goldenNic.html">Golden Nic</a></li>
-											<li><a href="howDoYouLikeThemApples.html">How Do You Like Them Apples</a></li>
+											<li><a href="aLightIsAllWeNeed.html">A Light Is All We Need</a></li>
 											<li><a href="cv.html">CV</a></li>
 										</ul>
 									</div>
