--- a/fr/cv.html
+++ b/fr/cv.html
@@ -52,7 +52,7 @@
 							<div class="inner">
 								<section>
 									<ul>
-										<a href="/assets/downloadableFile/CV - fr - Antony Ménard.pdf" download>Télécharger le CV en PDF ici</a>
+										<a href="/assets/downloadableFile/CV-Antony Ménard (FR).pdf" download>Télécharger le CV en PDF ici</a>
 									</ul>
 									<h4>Diplômes</h4>
 									<ul>
