update web site CV

--- a/cv.html
+++ b/cv.html
@@ -54,18 +54,18 @@
 									<ul>
 										<a href="/assets/downloadableFile/CV-Antony Ménard (ENG).pdf" download>Download CV to PDF here</a>
 									</ul>
-									<h4>Diploma</h4>
+									<h4>Education & Diploma</h4>
 									<ul>
-										<li>Bachelor's degree in video game Development, UQAC, 2022</li>
+										<li>Bachelor's degree in video game Development, Université du Québec à Chicoutimi (UQAC), 2022</li>
 										<li>Certifications Azure Fundamentals (AZ-900)</li>
-										<li>DEC in programming, video game option, Cégep de Ste-Foy, 2020</li>
+										<li>DEC in computer programming, video game option, Cégep de Ste-Foy, 2020</li>
 									</ul>
 									<hr />
 									<h4>Skills</h4>
 									<ul>
 										<li>Fluency in French and English (read, spoken, written)</li>
 										<li>Languages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
-										<li>Platforms: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
+										<li>Platforms: Unity, Unreal Engine 4, Git, Perforce, Android Studio, Visual Studio</li>
 										<li>Agile/Kanban Methods</li>
 									</ul>
 									<hr />
@@ -84,16 +84,16 @@
 												-Analyze existing features and, if need be, define new solutions to the needs of systems<br>
 												-Automate the Beneva's mobile app build with GitHub Actions<br>											</p>
 										</li>
-										<li>Programmer (Internship) - Beneva
+										<li>Programmer (Intern) - Beneva
 											<p>May to August 2019 <br>
-												-Automating of interface testing on mobile app<br>
-												-Developping a web site to spread the use of tests by others developpers<br>
+												-Automate interface testing on mobile app<br>
+												-Develop a web site to spread the use of tests by others developpers<br>
 												-Research for new technologies and sofware to adapt the tests on both Android and IOS<br>
 											</p>
 										</li>
 									</ul>
 									<hr />
-									<h4>Distinctions</h4>
+									<h4>Scholars & Distinctions</h4>
 									<ul>
 										<li>Two Excellence Scholarships from UQAC Foundation (2020, 2022)</li>
 										<li>Third prize at HackQC 2019 (Create an app to identify nearby electric car charging stations and the touristic attractions near them)</li>
