--- a/fr/cv.html
+++ b/fr/cv.html
@@ -56,7 +56,7 @@
 									</ul>
 									<h4>Diplômes</h4>
 									<ul>
-										<li>BAC en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022</li>
+										<li>Baccalauréat en développement de jeux vidéo, Université du Québec à Chicoutimi (UQAC), 2022</li>
 										<li>Certifications Azure Fundamentals (AZ-900)</li>
 										<li>DEC en programmation, option jeux vidéo, Cégep de Ste-Foy, 2020</li>
 									</ul>
@@ -65,7 +65,7 @@
 									<ul>
 										<li>Maîtrise du français et de l'anglais (lu, parlé, écrit)</li>
 										<li>Langages: C++/C#, Java, SQL, PHP, HTML 5, CSS 3, Javascript, NodeJS, ReactJS, Kotlin</li>
-										<li>Plateformes: Unreal Engine 4, Unity, Git, Perforce, Android Studio</li>
+										<li>Plateformes: Unity, Unreal Engine 4, Git, Perforce, Android Studio, Visual Studio</li>
 										<li>Méthodologies Agile/Kanban</li>
 									</ul>
 									<hr />
@@ -85,7 +85,7 @@
 												- Automatiser la création de l'application mobile de Beneva avec les GitHub Actions<br>
 											</p>
 										</li>
-										<li>Programmeur (stagiaire) - Beneva
+										<li>Programmeur (Stagiaire) - Beneva
 											<p>Mai à Août 2019 <br>
 												- Automatisation des tests d'interface sur l'application mobile<br>
 												- Création d'un site Web pour diffuser l'utilisation des tests par d'autres développeurs<br>
